--- a/python intro/Untitled.ipynb
+++ b/python intro/Untitled.ipynb
@@ -471,7 +471,7 @@
     "    # Instance method\n",
     "    def greet(self, loud=False):\n",
     "        if loud:\n",
-    "            print('HELLO, %s!' % self.name.upper())\n",
+    "            print('HELO, %s!' % self.name.upper())\n",
     "        else:\n",
     "            print('Hello, %s' % self.name)\n",
     "\n",
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "id": "2bf48f41",
    "metadata": {},
    "outputs": [
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "id": "1837753c",
    "metadata": {},
    "outputs": [
@@ -983,7 +983,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'str'>\n"
+      "After local assignment: test spam\n",
+      "After nonlocal assignment: nonlocal spam\n",
+      "After global assignment: nonlocal spam\n",
+      "In global scope: global spam\n"
      ]
     }
    ],
@@ -991,8 +994,28 @@
     "#import imageio\n",
     "#---------------#\n",
     "\n",
-    "x = 'abc'\n",
-    "print(type(x))"
+    "def scope_test():\n",
+    "    def do_local():\n",
+    "        spam = \"local spam\"\n",
+    "\n",
+    "    def do_nonlocal():\n",
+    "        nonlocal spam\n",
+    "        spam = \"nonlocal spam\"\n",
+    "\n",
+    "    def do_global():\n",
+    "        global spam\n",
+    "        spam = \"global spam\"\n",
+    "\n",
+    "    spam = \"test spam\"\n",
+    "    do_local()\n",
+    "    print(\"After local assignment:\", spam)\n",
+    "    do_nonlocal()\n",
+    "    print(\"After nonlocal assignment:\", spam)\n",
+    "    do_global()\n",
+    "    print(\"After global assignment:\", spam)\n",
+    "\n",
+    "scope_test()\n",
+    "print(\"In global scope:\", spam)"
    ]
   },
   {
