--- a/Intro ML and DM/ML-code/L2-preprocessing-news.ipynb
+++ b/Intro ML and DM/ML-code/L2-preprocessing-news.ipynb
@@ -103,18 +103,16 @@
       "----------------------------------------------\n",
       "doi-song: 120\n",
       "du-lich: 54\n",
-      "phap-luat: 59\n"
-     ]
-    },
-    {
-     "ename": "NotADirectoryError",
-     "evalue": "[Errno 20] Not a directory: 'data/news_vnexpress/.DS_Store'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotADirectoryError\u001b[0m                        Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m label \u001b[38;5;129;01min\u001b[39;00m os\u001b[38;5;241m.\u001b[39mlistdir(INPUT):\n\u001b[0;32m----> 6\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlabel\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(os\u001b[38;5;241m.\u001b[39mlistdir(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(INPUT, label)))\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m     n \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(os\u001b[38;5;241m.\u001b[39mlistdir(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(INPUT, label)))\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-------------------------\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNotADirectoryError\u001b[0m: [Errno 20] Not a directory: 'data/news_vnexpress/.DS_Store'"
+      "phap-luat: 59\n",
+      "the-thao: 173\n",
+      "thoi-su: 59\n",
+      "suc-khoe: 162\n",
+      "giai-tri: 201\n",
+      "giao-duc: 105\n",
+      "kinh-doanh: 262\n",
+      "khoa-hoc: 144\n",
+      "-------------------------\n",
+      "Tổng số văn bản: 1339\n"
      ]
     }
    ],
@@ -124,7 +122,9 @@
     "print('----------------------------------------------')\n",
     "n = 0\n",
     "for label in os.listdir(INPUT):\n",
-    "    print(f'{label}: {len(os.listdir(os.path.join(INPUT, label)))}')\n",
+    "    print(f'{label}: {len(os.listdir(os.path.join(INPUT, label)))}') \n",
+    "    # os.listdir(path) danh sách chứa tên của các thư mục được cung cấp bởi đường dẫn\n",
+    "    # os.path.join(path, *paths) \n",
     "    n += len(os.listdir(os.path.join(INPUT, label)))\n",
     "\n",
     "print('-------------------------')\n",
@@ -141,6 +141,7 @@
      "output_type": "stream",
      "text": [
       "mapping:\n",
+      "10\n",
       "doi-song - 0\n",
       "du-lich - 1\n",
       "giai-tri - 2\n",
@@ -164,7 +165,8 @@
     "# load data\n",
     "data_train = load_files(container_path=INPUT, encoding=\"utf-8\")\n",
     "print('mapping:')\n",
-    "for i in range(len(data_train.target_names)):\n",
+    "print(len(data_train.target_names))\n",
+    "for i in range(len(data_train.target_names)): # \n",
     "    print(f'{data_train.target_names[i]} - {i}')\n",
     "\n",
     "print('--------------------------')\n",
