--- a/Intro ML and DM/ML-code/L3-linear-regression.ipynb
+++ b/Intro ML and DM/ML-code/L3-linear-regression.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,6 +106,7 @@
    "source": [
     "with open('data/diabetes_train.pkl', 'rb') as f:\n",
     "    diabetes_train = pickle.load(f)\n",
+    "    \n",
     "print(\"Số chiều input: \", diabetes_train['data'].shape)\n",
     "print(\"Số chiều target y tương ứng: \", diabetes_train['target'].shape)\n",
     "print()\n",
@@ -127,12 +128,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegression()\n"
+     ]
+    }
+   ],
    "source": [
     "# Xây dựng mô hình sử dụng thư viện scikit-learn\n",
-    "regr = linear_model.LinearRegression()\n"
+    "# Lấy mô hình hồi quy tuyến tính \n",
+    "regr = linear_model.LinearRegression()\n",
+    "print(regr)"
    ]
   },
   {
@@ -148,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -163,8 +174,10 @@
    ],
    "source": [
     "# huấn luyện mô hình\n",
-    "regr.fit(diabetes_train['data'], diabetes_train['target'])\n",
-    "print(\"[w1, ... w_n] = \", regr.coef_)\n",
+    "regr.fit(diabetes_train['data'], diabetes_train['target']) # gán vào mô hình hồi quy tuyến tính\n",
+    "# x_train = diabetes_train['data']\n",
+    "# y_train = diabetes_train['target']\n",
+    "print(\"[w1, ... w_n] = \", regr.coef_) # hệ số \n",
     "print(\"w0 = \", regr.intercept_)"
    ]
   },
@@ -184,9 +197,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(42,)\n",
+      "[185.39343461  90.33884916 152.32545293 250.86678323 198.45869844\n",
+      " 281.11782037  50.82891661 176.8768519  202.22818344 172.41704784\n",
+      " 155.89857    152.41403254 234.6586589  123.00017838 166.31986886\n",
+      " 174.69177418 226.36432904 152.4920951  101.24206908  83.71261404\n",
+      " 143.75565462 192.27187655 196.20957111 153.39127768 172.98189004\n",
+      " 111.70862733 164.01793539 131.68173038 258.74174951 100.82796839\n",
+      " 117.71197104 123.38543133 219.97763193  62.54963497 133.39001896\n",
+      " 121.15039064  53.36114923 191.97459197 105.28021173 123.7801411\n",
+      " 210.10719692  54.50316986]\n"
+     ]
+    }
+   ],
    "source": [
     "# đọc dữ liệu test\n",
     "# dữ liệu test có cấu trúc giống dữ liệu huấn luyện nhưng số lượng mẫu chỉ là 42\n",
@@ -194,7 +224,9 @@
     "    diabetes_test = pickle.load(f)\n",
     "\n",
     "# Thực hiện phán đoán cho dữ liệu mới\n",
-    "diabetes_y_pred = regr.predict(diabetes_test['data'])"
+    "diabetes_y_pred = regr.predict(diabetes_test['data'])\n",
+    "print(diabetes_y_pred.shape)\n",
+    "print(diabetes_y_pred)"
    ]
   },
   {
